--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "postcss": "^8.4.28",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3.3.3",
-    "vue": "^3.2.13",
+    "vue": "^3.2.36",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -27,7 +28,6 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "typescript": "~4.5.5"
   },
