--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.1",
     "animate.css": "^4.1.1",
-    "axios": "^1.4.0",
+    "axios": "1.6.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "slick-carousel": "^1.8.1",
